syntax = "proto2";

package core.api.ping;
option go_package = "core";

message PingRequest {
    optional string name = 1;
}
message PingReply {
    optional string message = 1;
}