syntax = "proto2";

package core.api.start_game;
option go_package = "core";

message Request {
  repeated string players = 1;
  message WonderSide {
    optional string wonder_name = 1;
    optional bool is_side_b = 2;
  }
  repeated WonderSide wonder_sides = 2;
}